<resources>
    <string name="app_name" translatable="false">mz</string>
    <string name="setting_resolution_180P">180P</string>
    <string name="setting_resolution_240P">240P</string>
    <string name="setting_resolution_360P">360P</string>
    <string name="setting_resolution_480P">480P</string>
    <string name="setting_resolution_540P">540P</string>
    <string name="setting_resolution_720P">720P</string>
    <string name="setting_audio_480">48KHz</string>
    <string name="setting_audio_441">44.1KHz</string>
    <string name="setting_audio_320">32KHz</string>
    <string name="setting_audio_aac_lc">LC</string>
    <string name="setting_audio_aac_he">HE-AAC</string>
    <string name="setting_audio_aac_hev2">HEv2-AAC</string>
    <string name="setting_audio_aac_ld">AAC-LD</string>
    <string name="setting_audio_aac_eld">ELD</string>
    <string name="audio_bitrate_value">64</string>
    <string name="push_url_messge">防止多人使用同一地址推流造成异常，建议更换推流地址</string>
    <string name="live_scene_list">直播场景列表</string>
    <string name="video_recording">录屏直播</string>
    <string name="live_basic_function">推流SDKv3.3.5</string>
    <string name="live_normal_function">普通推流</string>
    <string name="live_basic_function_old">推流SDKv1.3.0</string>
    <string name="license_declaration">版权信息</string>
    <string name="license_declaration_text">阿里云 copyright@2017，阿里巴巴集团</string>
    <string name="version">版本:v3.3.5</string>
    <string name="pusher_setting">推流设置</string>
    <string name="input_tips">请输入推流地址或扫描二维码</string>
    <string name="resolution_label">分辨率</string>
    <string name="target_bitrate">目标码率</string>
    <string name="target_rate_value">1200</string>
    <string name="min_bitrate">最小码率</string>
    <string name="min_rate_value">300</string>
    <string name="initial_bitrate">初始码率</string>
    <string name="audio_bitrate">音频码率</string>
    <string name="initial_bit_value">1000</string>
    <string name="captrue_fps">采集帧率</string>
    <string name="init_fps">20</string>
    <string name="audio_sampling_rate">音频采样率</string>
    <string name="audio_profile">音频编码</string>
    <string name="audio_rate_value">20</string>
    <string name="sound_track">声道</string>
    <string name="single_track">单声道</string>
    <string name="dual_track">双声道</string>
    <string name="quality_mode">码控模式</string>
    <string name="quality_resolution_first">清晰度优先</string>
    <string name="quality_fluency_first">流畅度优先</string>
    <string name="quality_custom">自定义</string>
    <string name="beauty_mode_nornal">标准版</string>
    <string name="beauty_mode_professional">专业版</string>
    <string name="reconnect_duration">重连时长</string>
    <string name="reconnect_value">1000</string>
    <string name="reconnect_times">重连次数</string>
    <string name="retry_count">5</string>
    <string name="landscape_model">横屏推流</string>
    <string name="portrait">Portrait</string>
    <string name="homeLeft">HomeLeft</string>
    <string name="homeRight">HomeRight</string>
    <string name="front_camera">前置摄像头</string>
    <string name="setting_pre_mirror">预览镜像</string>
    <string name="setting_push_mirror">推流镜像</string>
    <string name="display_mode">显示模式</string>
    <string name="display_mode_full">拉伸</string>
    <string name="display_mode_fit">适合</string>
    <string name="display_mode_cut">剪裁</string>
    <string name="watermark">水印</string>
    <string name="watermark_setting">水印位置</string>
    <string name="audio_only_push_streaming">纯音频</string>
    <string name="video_only_push_streaming">纯视频</string>
    <string name="audio_hardware_encode">音频硬编</string>
    <string name="audio_software_encode">音频软编</string>
    <string name="bitrate_control">码控</string>
    <string name="extern_stream_mix">自定义混流</string>
    <string name="extern_stream_main">自定义主流</string>
    <string name="pause_image">暂停图片</string>
    <string name="network_image">网络差图片</string>
    <string name="variable_resolution">可变分辨率</string>
    <string name="video_mix_streaming">混流</string>
    <string name="screen_capture">开启录屏</string>
    <string name="beauty_mode_face">美颜模式</string>
    <string name="auto_focus">自动对焦</string>
    <string name="beauty_enable">开启美颜</string>
    <string name="hardware_encode">硬编</string>
    <string name="software_encode">软编</string>
    <string name="asynchronous_interface">异步接口</string>
    <string name="start_button">开始推流</string>
    <string name="start_preview_button">开始预览</string>
    <string name="stop_preview_button">停止预览</string>
    <string name="pause_button">暂停</string>
    <string name="resume_button">恢复</string>
    <string name="stop_button">停止推流</string>
    <string name="more_setting_button">更多设置</string>
    <string name="repush_button">重新推流</string>
    <string name="slide_right_view_log_char">右滑查看log图表</string>
    <string name="slide_left_view_log">左滑查看log</string>
    <string name="share_button">分享</string>
    <string name="dy_add_button">加贴纸</string>
    <string name="dy_remove_button">删贴纸</string>
    <string name="beauty_on">开启美颜</string>
    <string name="beauty_off">关闭美颜</string>
    <string name="beauty_white">美白</string>
    <string name="beauty_skin_smooth">磨皮</string>
    <string name="beauty_ruddy">红润</string>
    <string name="beauty_brightness">亮度</string>
    <string name="beauty_cheekpink">腮红</string>
    <string name="beauty_thinface">瘦脸</string>
    <string name="beauty_shortenface">收下巴</string>
    <string name="beauty_bigeye">大眼</string>
    <string name="save_log">保存日志</string>
    <string name="modules_time_consuming">各模块耗时</string>
    <string name="modules_audio_fps">各模块音频帧率</string>
    <string name="modules_video_fps">各模块视频帧率</string>
    <string name="modules_bitrate">各模块码率</string>
    <string name="capture">采集</string>
    <string name="render">渲染</string>
    <string name="encode">编码</string>
    <string name="push">推流</string>
    <string name="local_log">本地日志</string>
    <string name="back_music">背景音乐</string>
    <string name="times">次</string>
    <string name="mic_volume">麦克风音量</string>
    <string name="total_time">总耗时</string>
    <string name="audio_fps">各模块audio fps</string>
    <string name="video_fps">各模块video fps</string>
    <string name="bitrate">各模块bitrate</string>
    <string name="video_encode">视频编码</string>
    <string name="audio_encode">音频编码</string>
    <string name="buffer">各模块buffer</string>
    <string name="video_renderbuffer">视频渲染</string>
    <string name="video_encodebuffer">视频编码</string>
    <string name="video_uploadbuffer">视频上传</string>
    <string name="audio_encodebuffer">音频编码</string>
    <string name="audio_uploadbuffer">音频上传</string>
    <string name="start_preview">开始预览</string>
    <string name="stop_preview">停止预览</string>
    <string name="start_push">开始推流</string>
    <string name="stop_push">停止推流</string>
    <string name="pause_push">暂停</string>
    <string name="resume_push">恢复</string>
    <string name="first_frame">首帧渲染</string>
    <string name="setting_flash">开启闪光灯</string>
    <string name="exit_publisher">退出</string>
    <string name="advanced_options">高级选项</string>
    <string name="GOP">Gop</string>
    <string name="push_url">推流地址</string>
    <string name="ispushing">是否推流</string>
    <string name="publisher_log">推流参数log：</string>
    <string name="video_pts">当前Video pts:</string>
    <string name="audio_pts">当前Audio pts：</string>
    <string name="keyframe_pts">当前KeyFrame pts:</string>
    <string name="video_buffer">当前编码队列Video Buffer：</string>
    <string name="audio_buffer">当前编码队列Audio Buffer：</string>
    <string name="rtmp_video_buffer">当前RTMP队列Video Buffer：</string>
    <string name="rtmp_audio_buffer">当前RTMP队列Audio Buffer：</string>
    <string name="drop_video_frame">丢弃Video帧：</string>
    <string name="drop_audio_frame">丢弃Audio帧：</string>
    <string name="video_size">上传Video总大小（KB）：</string>
    <string name="audio_size">上传Audio总大小（KB）：</string>
    <string name="no_camera_permission">没有权限使用摄像头，请开启摄像头权限</string>
    <string name="no_record_bluetooth_permission">没有权限使用蓝牙，请开启蓝牙权限</string>
    <string name="no_record_audio_permission">没有权限使用录音，请开启录音权限</string>
    <string name="no_read_phone_state_permission">没有读取用户数据的权限，请开启该权限</string>
    <string name="no_write_external_storage_permission">没有文件写权限，请开启该权限</string>
    <string name="no_read_external_storage_permission">没有文件读权限，请开启该权限</string>
    <string name="dialog_title">错误提示</string>
    <string name="ok">确定</string>
    <string name="reconnect">重连</string>
    <string name="network_poor">网络差，请退出或者重连</string>
    <string name="network_recovery">网络恢复</string>
    <string name="reconnect_start">重连开始</string>
    <string name="reconnect_fail">重连失败</string>
    <string name="connect_fail">连接失败</string>
    <string name="send_message">发送消息</string>
    <string name="reconnect_success">重连成功</string>
    <string name="senddata_timeout">发送数据超时</string>
    <string name="restart_success">重启成功</string>
    <string name="bgm_open_failed">音乐文件打开失败</string>
    <string name="system_error">系统错误：</string>
    <string name="sdk_error">SDK错误：</string>
    <string name="argument_exception">参数错误</string>
    <string name="state_exception">状态错误</string>
    <string name="bite_error">码率参数设置错误！</string>
    <string name="drop_frame">丢帧</string>
    <string name="adjust_bitrate">调整码率</string>
    <string name="adjust_fps">调整帧率</string>
    <string name="url_empty">请输入推流地址</string>
    <string name="min_fps">最小帧率</string>
    <string name="no_music">无音乐</string>
    <string name="pause">暂停</string>
    <string name="resume">恢复</string>
    <string name="stop">停止</string>
    <string name="start">开始</string>
    <string name="close_loop">关循环</string>
    <string name="open_loop">开循环</string>
    <string name="close_mute">关静音</string>
    <string name="open_mute">开静音</string>
    <string name="close_ears_back">关耳返</string>
    <string name="open_ears_back">开耳返</string>
    <string name="close_audio_denoise">关降噪</string>
    <string name="open_audio_denoise">开降噪</string>
    <string name="accompaniment">伴奏</string>
    <string name="voice">人声</string>
    <string name="internet_music">网络音乐</string>
    <string name="max_bitrate">最大码率</string>
    <string name="best_bitrate">最佳码率</string>
    <string name="quit_live">长时间重连失败，已不适合直播，请退出</string>
    <string name="network_message">当前网络状态极差，已无法正常流畅直播，确认要继续直播吗？</string>
    <string name="camera_success">摄像头打开成功</string>
    <string name="camera_fail">摄像头打开失败</string>
    <string name="error_message">-22错误产生</string>
    <string name="mute_off">静音关闭</string>
    <string name="mute_on">静音开启</string>
    <string name="mirror_off">镜像关闭</string>
    <string name="mirror_on">镜像开启</string>
    <string name="advance_setting">高级设置</string>
    <string name="watermark_position">水印位置 (上右 1, 上左 2, 下右 3, 下左 4) :</string>
    <string name="fps_hint">帧率必须是0~30之间</string>
    <string name="watermard_url">水印图片路径:</string>
    <string name="fps">帧率</string>
    <string name="front_camera_mirror">前置摄像头镜像</string>
    <string name="landscape">横屏</string>
    <string name="portrait_normal">竖屏</string>
    <string name="ready_push">准备直播</string>
    <string name="rtmp_url">请输入rtmp服务器的地址</string>
    <string name="beauty_level">美颜级别</string>
    <string name="toggle_switch_flash_on">开启闪光灯</string>
    <string name="toggle_switch_flash_off">关闭闪光灯</string>
    <string name="app_camera">切换摄像头</string>
    <string name="live_push">开始推流</string>
    <string name="live_stop">结束推流</string>
    <string name="toggle_switch_beauty_on">美颜开启</string>
    <string name="toggle_switch_beauty_off">美颜关闭</string>
    <string name="VIDEO_CAPTURE_FPS">视频采集帧率（实时帧率）:</string>
    <string name="AUDIO_ENCODER_FPS">音频编码帧率（实时帧率）:</string>
    <string name="VIDEO_ENCODER_FPS">视频编码帧率（实时帧率）:</string>
    <string name="OUTPUT_BITRATE">输出码率（实时码率）:</string>
    <string name="AV_OUTPUT_DIFF">当前输出流，audio pts与video pts的差值:</string>
    <string name="AUDIO_OUTPUT_FPS">音频输出帧率（实时帧率）:</string>
    <string name="answer">答题</string>
</resources>