<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:visibility="gone"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/top_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/exit"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@mipmap/back" />

        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/answer_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_oval"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/answer"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/beauty_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/beauty_selector"
                android:clickable="true" />

            <ImageView
                android:id="@+id/music"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:clickable="true"
                android:src="@mipmap/music" />

            <ImageView
                android:id="@+id/flash"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/flash_selector"
                android:clickable="true" />

            <ImageView
                android:id="@+id/camera"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:src="@mipmap/camera_id" />

            <Button
                android:id="@+id/push_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/start_button"
                android:textColor="@color/text_white" />
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/push_url_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/push_url" />

        <TextView
            android:id="@+id/push_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/push_url_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/ispushing" />

        <TextView
            android:id="@+id/isPushing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shap_gradient"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/preview_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/stop_preview_button"
            android:textColor="@color/text_white" />

        <!--<Button-->
        <!--android:id="@+id/push_button"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:background="@null"-->
        <!--android:ellipsize="end"-->
        <!--android:maxLines="2"-->
        <!--android:text="@string/start_button"-->
        <!--android:textColor="@color/text_white" />-->

        <Button
            android:id="@+id/opera_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/pause_button"
            android:textColor="@color/text_white" />

        <Button
            android:id="@+id/restart_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/repush_button"
            android:textColor="@color/text_white" />

        <Button
            android:id="@+id/more"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/more_setting_button"
            android:textColor="@color/text_white" />
    </LinearLayout>

</RelativeLayout>