<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:visibility="gone">

    <RelativeLayout
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/pusher_setting"
            android:textColor="@color/text_white"
            android:textSize="@dimen/font_size_30px" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/url_editor"
            style="@style/edit_line_style"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0.1"
            android:hint="@string/input_tips"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:text="rtmp://push-demo-rtmp.aliyunlive.com/test/stream6" />

        <ImageView
            android:id="@+id/qr_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:src="@mipmap/ic_qrcode" />

        <ImageView
            android:id="@+id/qr_create"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:src="@mipmap/icon_qr_create" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/push_url_messge"
        android:textSize="@dimen/font_size_24px" />

    <include
        layout="@layout/push_setting_param"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/beginPublish"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_rect_blue"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pushStatusTex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="2"
            android:padding="5dp"
            android:text="@string/start_push"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_28px" />
    </LinearLayout>
</LinearLayout>


